# cria

./: README.md  pyproject.toml
cria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: __main__.py
src/app/cli/: agent.py  coding_workflows.py  context.py  enhanced_tools.py  intelligence.py  memory.py  tools.py  tui.py
src/cria/: __init__.py  __main__.py
src/cria.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cria/cli/: agent.py  tools.py  tui.py
